# iskandercoin

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  configure~
.github/: ISSUE_TEMPLATE.md
build_msvc/: bitcoin_config.h  common.init.vcxproj
contrib/: README.md  install_db4.sh  valgrind.supp
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  codebase-structure.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  omnicore-architecture.md  reduce-traffic.md  release-notes-texitcoin.md  release-process.md  security-audit-report.md  tor.md  zmq.md
doc/man/: Makefile.am  iskander-cli.1  iskander-qt.1  iskander-tx.1  iskander-wallet.1  iskanderd.1  texitcoin-cli.1  texitcoin-qt.1  texitcoin-tx.1  texitcoin-wallet.1  texitcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.omnicore.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  auxpow.cpp  auxpow.h  banman.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.h  core_read.cpp  flatfile.h  hash.h  httprpc.cpp  init.cpp  init.h  (+34 more)
(+323 files in other folders)
